# collage

./: .gitignore  LICENSE  README.md  build.sbt  download_lib.rb
.github/workflows/: ci.yml
libcollage/: .gitignore  CMakeLists.txt  build_linux_amd64.sh  build_linux_arm64.sh  build_mac.sh  libcollage.cpp  libcollage.h  m_ctypes.h  main.cpp
libcollage/src/main/resources/: collations.properties
libcollage/src/main/scala/io/github/yuxiqian/libcollage/: CollationList.scala  ReflectionUtils.scala
src/main/resources/libcollage/darwin/aarch64/: libcollage.dylib
src/main/scala/io/github/yuxiqian/libcollage/: Collation.scala  CollationList.scala  JniUtils.scala
src/test/scala/io/github/yuxiqian/libcollage/: CollageTest.scala
